Updated documentation for version 1.0.0-beta4-SNAPSHOT - small fix.

--- a/play2-maven-plugin/1.0.0-beta4-SNAPSHOT/index.html
+++ b/play2-maven-plugin/1.0.0-beta4-SNAPSHOT/index.html
@@ -218,7 +218,7 @@
             <div class="section">
 <h2><a name="About_Play2_Maven_Plugin"></a>About Play2 Maven Plugin</h2>
 <p>This is <a class="externalLink" href="http://maven.apache.org">Maven</a> plugin for <a class="externalLink" href="http://www.playframework.org">Play! Framework</a>.</p>
-<p>It supports Play! <b>2.1.x</b>, <b>2.2.x</b>, <b>2.3.x</b> and <b>2.4.x</b> versions only (2.0.x versions are not supported).</p>
+<p>It supports Play! <b>2.1.x</b>, <b>2.2.x</b>, <b>2.3.x</b>, <b>2.4.x</b> and <b>2.5.x</b> versions only (2.0.x versions are not supported).</p>
 <p>Maven plugin for Play! <b>1.x</b> is available <a class="externalLink" href="https://github.com/play1-maven-plugin/play1-maven-plugin">here</a></p>
 <div class="section">
 <h3><a name="Project_Modules"></a>Project Modules</h3>
