--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-    <meta http-equiv="refresh" content="0; url=./play2-maven-plugin/1.0.0-beta4/" />
+    <meta http-equiv="refresh" content="0; url=./play2-maven-plugin/index.html" />
 </head>
 <body>
 </body>
